test/pass/closures/close_loop_var_in_func.lily
define wrap(x: Integer) : Function( => Integer) {
    return (|| x * x)
}

var l: List[Function( => Integer)] = []

for i in 0...5:
    l.push(wrap(i))

if [l[0](), l[1](), l[2](), l[3](), l[4]()] != [0, 1, 4, 9, 16]:
    stderr.print("Failed.")
